--- a/_konzept/edbv_konzept_ag_xx.tex
+++ b/_konzept/edbv_konzept_ag_xx.tex
@@ -43,6 +43,13 @@ Das Projekt soll Bücher in einem Bücherregal erkennen, in Bücher-Koordinaten 
 
 \section{Eingabe}
 JPG-Bild eines Bücherregals mit Büchern, auf denen eindeutige Labels (schwarz-auf-weiß) kleben.
+\begin{itemize}
+  \item Die Bücher müssen gerade stehen.
+  \item Das Bild darf nicht mehr als 30° von der Waagrechte abweichen.
+  \item Das Bild muss eine für die Texterkennung der Labels ausreichende Auflösung aufweisen (Abhängig von der Entfernung).
+  \item Das Bild muss farbig sein.
+\end{itemize}
+
 
 \section{Ausgabe}
 visuell:\\
@@ -65,12 +72,19 @@ Strukturierte Klartext-Datei mit Inhalt:
 
 \section{Voraussetzungen und Bedingungen}
 
+Das "input" Bild muss volgende Voraussetzungen erfüllen: \\
 \begin{itemize}
-  \item Die Bücher müssen gerade (+- 5°) stehen.
-  \item Das Bild darf nicht mehr als 30° von der Waagrechte abweichen.
-  \item Das Bild muss eine für die Texterkennung der Labels ausreichende Auflösung aufweisen (Abhängig von der Entfernung).
-  \item Das Bild muss farbig sein.
+  \item Die Bücher sollen alle einen gleichen Label haben. 
+  \item Die Bücher auf dem Bild sollen gerade stehen (senkrecht zur Schrankebene)
+  \item Die Auflösung und Helligkeit des Bildes ist so zu wählen, dass das Label von dem Buch erkennbar und die Ziffern und Buchstaben am Label lesbar sind.
+  \item Das input bild soll möglichst senkrecht zu Schrankebene gemacht sein.
 \end{itemize}
+
+ 
+
+
+
+
 
 Voraussetzungen für Eingabe definieren, anhand dieser werden Datensätze erstellt\\
 \textit{Kommentar: Welche Eigenschaften muss der Input erfüllen, damit ihr damit arbeiten könnt (zB.: Kameraeinstellungen, Hintergrundeigenschaften, etc.)?}
@@ -81,10 +95,10 @@ Methodik- Pipeline
 		\textit{Finden der Regalfächer zum Korrigieren der Perspektive}
 	\item Persprektivenkorrektur\\
 		\textit{Mittels Transformationsmatrix aus HT berechnet}
-	\item Kantenfilter \& Finden von Interest Points\\
-		\textit{Finden der Ecken von Labels}
-	\item Integral imaging auf IPs\\
-		\textit{Finden von Labels innerhalb eines Akzeptanzbereichs}
+	\item Morpholigische Erosion auf schwarze Bereiche im Bild\\
+		\textit{Entfernung des Labeltexts auf den Labels}
+	\item Integral imaging\\
+		\textit{Finden von weißen Rechtecken (Labels)}
 	\item Eigene Heuristik\\
 		\textit{Einordnen von Labels in Buch-Koordinaten}
 	\item Optical Character Recognition\\
@@ -130,11 +144,11 @@ Methodik- Pipeline
 		\hline
 		Meilenstein & abgeschlossen am & Arbeitsaufwand in h\\
 		\hline
-		Prototyp & 10.11. & 30\\
+		Prototyp & 27.10. & 30\\
 		\hline
-		Hough-Transformation & 17.11. & 50\\
+		Hough-Transformation & 15.11. & 50\\
 		\hline
-		Perspektivenkorrektur & 17.11. & 6\\
+		Perspektivenkorrektur & 15.11. & 6\\
 		\hline
 		Labelerkennung & 25.11. & 80\\
 		\hline
@@ -148,7 +162,7 @@ Methodik- Pipeline
 		\hline
 		Tests & 18.12. & 5\\
 		\hline
-		Evaluierung & 20.12. & 5 \\
+		Evaluierung & 20.12. & 5\\
 		\hline
 		\end{tabular}
 \end{table}
