--- a/_konzept/edbv_konzept_ag_xx.tex
+++ b/_konzept/edbv_konzept_ag_xx.tex
@@ -70,7 +70,7 @@ Strukturierte Klartext-Datei mit Inhalt:
   \item Das Bild muss eine für die Texterkennung der Labels ausreichende Auflösung aufweisen (Abhängig von der Entfernung).
   \item Das Bild muss farbig sein.
   \item Das Bild muss ausreichend hell sein. 
-  \item Wenn möglich ist ein Weisausgleich durchzuführen.
+  \item Wenn möglich ist Weisabgleich durchzuführen.
   
   
 \end{itemize}
